[package]
name = "tourney"
version = "0.1.0"
authors = ["wilzet"]
edition = "2021"
description = "Game theory tournament"
readme = "README.md"
repository = "https://github.com/wilzet/tourney"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constcat = "0.4.0"
rand = "0.8.4"
threadpool = "1.8.1"
